--- a/src/makefile
+++ b/src/makefile
@@ -9,7 +9,7 @@ OBJ = $(patsubst %.c,$(DIR_OBJ)/*.o,$(notdir $(SRC)))
 TARGET = libt.a
 BIN_TARGET = $(DIR_BIN)/$(TARGET)
 
-object = parse.o rpcMethod.o
+object = HttpPostRequest.o RpcMethod.o HnbClientFsm.o
 
 CC = g++
 CFLAGS = -I ../libs/bin/libxml2-2.7.2/generic/i686-linux/include/libxml2/ -L ../libs/bin/libxml2-2.7.2/generic/i686-linux/lib/ -lxml2 -std=c++11 -I ../libs/bin/csoap/generic/i686-linux/include/nanohttp-1.1/ -L ../libs/bin/csoap/generic/i686-linux/lib/ -lnanohttp -I ../libs/bin/csoap/generic/i686-linux/include/libcsoap-1.1  -L ../libs/bin/csoap/generic/i686-linux/lib/ -lcsoap -lpthread -g
@@ -26,4 +26,4 @@ clean:
 	rm $(wildcard $(DIR_OBJ)/*.o) $(BIN_TARGET)
 
 test:
-	$(CC) t.cpp $(TARGET) $(CFLAGS) -o t
+	$(CC) HttpConnect.cpp $(object) $(CFLAGS) -o hms
